# RAGFlow

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 7fd9c920e5d5_initial.py  9642235db3d4_make_firstname_nullable.py  f3d274f370c5_make_firstname_nullable.py
src/: app.py  llm.py  main.py  services.py
src/core/: config.py  logging.py  qdrant.py  redis.py
src/db/: db_helper.py
src/db/models/: base.py  user.py
src/db/repositories/: user_repo.py  vector_repo.py
src/integrations/telegram/: bot.py  fsm_states.py
src/integrations/telegram/handlers/: bases_manage.py  commands.py  dialog.py  messages.py  profile.py
src/integrations/telegram/keyboards/: inline.py  reply.py
src/integrations/telegram/messages/: text.py
src/integrations/telegram/middlewares/: db.py
src/services/: embeddings_service.py  llm_service.py
src/utils/: text_processing.py  text_splitter.py
